# Block7/7.3/swagger-output.json
@@ -307,6 +307,19 @@
           }
         }
       }
+    },
+    "/logout": {
+      "delete": {
+        "description": "",
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
     }
   }
 }
